Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.16-dev-847-g386fccd-x86-gcc-lin-dbg
- Open Event Viewer
Byte / Word radiobuttons are enabled while empty entry is displayed
Should be disabled by default when nothing is loaded- Click on Radiobutton
Dialog exception
err:(win32ss/user/user32/windows/message.c:1556) Exception Dialog unicode 0040A4E2 Msg 273 pti B4119E08 Wndpti B4119E08 |

Attachments
Issue Links
- blocks
-
CORE-20023 Event Viewer (eventvwr) meta bug
-
- Reopened
-