[EVENTVWR] Fix "Bytes" and "Word" buttons enabled with empty entry (#7921)

CORE-20037